header > p fix color contrast

--- a/style/_main.scss
+++ b/style/_main.scss
@@ -22,7 +22,8 @@ header {
     }
 
     p {
-        color: $grayish-blue;
+        // color: $grayish-blue;
+        color: #4E5574;
         width: 80%;
     }
 }
