--- a/style/style.css
+++ b/style/style.css
@@ -47,7 +47,7 @@ header h1 {
   color: hsl(227deg, 35%, 25%);
 }
 header p {
-  color: hsl(225deg, 20%, 60%);
+  color: #4E5574;
   width: 80%;
 }
 
